crates/squawk_parser/tests/snapshots/tests__alter_user_mapping_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_user_mapping.sql
---
SOURCE_FILE
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_USER_MAPPING
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    MAPPING_KW "mapping"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE " "
    ROLE_REF
      ROLE_REF_CURRENT_ROLE
        CURRENT_ROLE_KW "current_role"
    WHITESPACE "\n    "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    WHITESPACE "\n    "
    ALTER_OPTION_LIST
      OPTIONS_KW "options"
      WHITESPACE " "
      L_PAREN "("
      ADD_FOREIGN_OPTION
        ADD_KW "add"
        WHITESPACE " "
        FOREIGN_OPTION_NAME
          IDENT "a"
        WHITESPACE " "
        LITERAL
          STRING "'v'"
      COMMA ","
      WHITESPACE " "
      SET_FOREIGN_OPTION
        SET_KW "set"
        WHITESPACE " "
        FOREIGN_OPTION_NAME
          IDENT "b"
        WHITESPACE " "
        LITERAL
          STRING "'w'"
      COMMA ","
      WHITESPACE " "
      DROP_FOREIGN_OPTION
        DROP_KW "drop"
        WHITESPACE " "
        FOREIGN_OPTION_NAME
          IDENT "c"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
