crates/squawk_parser/tests/snapshots/tests__cluster_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/cluster.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    WHITESPACE " "
    OPTION_ITEM_LIST
      L_PAREN "("
      OPTION_ITEM
        OPTION_ITEM_KEY
          VERBOSE_KW "verbose"
        WHITESPACE " "
        OPTION_ITEM_VALUE
          LITERAL
            FALSE_KW "false"
      R_PAREN ")"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    CLUSTER_USING_INDEX
      USING_KW "using"
      WHITESPACE " "
      INDEX_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "idx"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- options_only"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    WHITESPACE " "
    OPTION_ITEM_LIST
      L_PAREN "("
      OPTION_ITEM
        OPTION_ITEM_KEY
          VERBOSE_KW "verbose"
        WHITESPACE " "
        OPTION_ITEM_VALUE
          LITERAL
            FALSE_KW "false"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- pre_14"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    WHITESPACE " "
    VERBOSE_KW "verbose"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    CLUSTER_USING_INDEX
      USING_KW "using"
      WHITESPACE " "
      INDEX_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "idx"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- pre_17"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    WHITESPACE " "
    VERBOSE_KW "verbose"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- pre_8_3"
  WHITESPACE "\n"
  CLUSTER
    CLUSTER_KW "cluster"
    WHITESPACE " "
    VERBOSE_KW "verbose"
    WHITESPACE " "
    CLUSTER_LEGACY
      INDEX_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "f"
      WHITESPACE " "
      ON_PATH
        ON_KW "on"
        WHITESPACE " "
        TABLE_NAME_REF
          PATH_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "foo"
            DOT "."
            PATH_SEGMENT_REF
              IDENT "bar"
    SEMICOLON ";"
  WHITESPACE "\n\n"
